# findecide

./: .gitignore  README.md  pyproject.toml
prompts/: rubric_evaluation.json  system_prompt.md
server/: api.py  orchestrator.py  schemas.py
server/mcp_tools/: server.py
web/: index.html
